force-app/main/default/objects/KPI_Summary__c/KPI_Summary__c.object-meta.xml
<CustomObject>
    <label>KPI Summary</label>
    <nameField>
        <displayFormat>KPI-{000000}</displayFormat>
        <label>KPI Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>