force-app/main/default/objects/KPI_Summary__c/fields/Connected_Org__c.field-meta.xml
<CustomField>
    <fullName>Connected_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Org</label>
    <referenceTo>Connected_Org__c</referenceTo>
    <relationshipLabel>KPI Summaries</relationshipLabel>
    <relationshipName>KPI_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>