force-app/main/default/objects/KPI_Summary__c/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <label>Current Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>