force-app/main/default/objects/KPI_Summary__c/fields/Date_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Date_Recorded__c</fullName>
    <label>Date Recorded</label>
    <required>true</required>
    <type>Date</type>
</CustomField>