force-app/main/default/objects/KPI_Summary__c/fields/KPI_Type__c.field-meta.xml
<CustomField>
    <fullName>KPI_Type__c</fullName>
    <label>KPI Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>