force-app/main/default/objects/KPI_Summary__c/fields/Last_Aggregated__c.field-meta.xml
<CustomField>
    <fullName>Last_Aggregated__c</fullName>
    <label>Last Aggregated</label>
    <type>DateTime</type>
</CustomField>