force-app/main/default/objects/KPI_Summary__c/fields/Metric_Value__c.field-meta.xml
<CustomField>
    <fullName>Metric_Value__c</fullName>
    <label>Metric Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>