force-app/main/default/objects/KPI_Summary__c/fields/Trend__c.field-meta.xml
<CustomField>
    <fullName>Trend__c</fullName>
    <description>Stores the trend status or descriptive change (e.g., UP, DOWN, Inactive &gt; 90 Days).</description>
    <label>Trend/Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>