force-app/main/default/objects/KPI_Summary__c/fields/Usage_Percent__c.field-meta.xml
<CustomField>
    <fullName>Usage_Percent__c</fullName>
    <label>Usage Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>