force-app/main/default/objects/KPI_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KPI_Type__c</columns>
    <columns>Current_Value__c</columns>
    <columns>Max_Value__c</columns>
    <columns>Usage_Percent__c</columns>
    <columns>Trend__c</columns>
    <columns>Last_Aggregated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>